fix(css): Weird overflow when screen size is reduced

--- a/css/screens/background.css
+++ b/css/screens/background.css
@@ -7,7 +7,6 @@
   -webkit-background-size: cover;
   color: var(--white);
   height: 100%;
-  overflow: hidden;
 }
 
 .background__darkner {
@@ -17,7 +16,6 @@
   flex-direction: column;
   height: 100%;
   justify-content: center;
-  width: 100%;
 }
 
 main {
